k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    name: microservices
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    name: jenkins
